--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -30,7 +30,7 @@
 
     {% block content %} {% endblock %}
 
-    <footer>
+    <footer class="col-md-12">
         <div id="redes">
             <ul>
                 <a href="https://github.com/ruizdiazever">GitHub</a>
