--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -36,21 +36,21 @@
                         </div>
                         
                         <div id="places">
-                            <article><a title="Bariloche" href="{% url 'bariloche' %}"><h1 class="display-3">Bariloche</h1></a></article>
+                            <article><a title="Bariloche" href="{% url 'bariloche' %}"><h1 class="display-3">Mountain</h1></a></article>
                             <article><a title="Buenos Aires" href="{% url 'ba' %}"><h1 class="display-3">BA</h1></a></article>
                             <article><a title="People" href="{% url 'people' %}"><h1 class="display-3">People</h1></a></article>
-                            <article><a title="Industrial" href="{% url 'industrial' %}"><h1 class="display-3">Industrial</h1></a></article> 
                             <article><h1 class="display-3">Italy</h1></article>
                             <article><h1 class="display-3">Seattle</h1></article>
                             <article><h1 class="display-3">Tromsø</h1></article>
                             <article><h1 class="display-3">Iceland</h1></article>
                             <article><h1 class="display-3">China</h1></article>
+                            <article><a title="Industrial" href="{% url 'industrial' %}"><h1 class="display-3">Others</h1></a></article> 
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        </header>
+    </header>
 {% endblock %}
 
 
