--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -35,7 +35,8 @@
             <ul>
                 <a href="https://github.com/ruizdiazever">GitHub</a>
                 <a href="https://www.linkedin.com/in/rerum/">Linkedln</a>
-                <a href="{% static 'core/archives/cv_design_low.pdf' %}">Curriculum</a>
+<!--                 <a href="{% static 'core/archives/cv_design_low.pdf' %}">Curriculum</a> -->
+                <a target="blank" href="http://sinconmasver.pythonanywhere.com/">Portfolio</a>
             </ul>
         </div>
         <div class="copy">
