--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %} | Ever Toujours</title>
     <link rel="stylesheet" href="{% static 'core/css/bootstrap.css' %}">
