Change url and add blank in 'redes'

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -34,10 +34,10 @@
     <footer class="col-md-12">
         <div id="redes">
             <ul>
-                <a href="https://github.com/ruizdiazever">GitHub</a>
-                <a href="https://www.linkedin.com/in/rerum/">Linkedln</a>
+                <a target="blank" href="https://github.com/ruizdiazever">GitHub</a>
+                <a target="blank" href="https://www.linkedin.com/in/everdev/">Linkedln</a>
 <!--                 <a href="{% static 'core/archives/cv_design_low.pdf' %}">Curriculum</a> -->
-                <a target="blank" href="http://sinconmasver.pythonanywhere.com/">Portfolio</a>
+                <a target="blank" href="http://everdev.pythonanywhere.com/">Portfolio</a>
             </ul>
         </div>
         <div class="copy">
