--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block background %}
-    <video src="{% static 'core/img/paulvandyk.mp4' %}" autoplay loop muted poster="{% static 'core/img/primary.jpg' %}">
+    <video src="{% static 'core/img/video.mp4' %}" autoplay loop muted poster="{% static 'core/img/primary.jpg' %}">
 </video> {% endblock %}
 
 {% block content %}
