--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -28,8 +28,10 @@
     {% include 'core/footer.html' %}
 
     <script src="{% static 'core/js/scrollreveal.min.js' %}" charset="utf-8"></script>
-    <script src="{% static 'core/js/querySelector.js' %}" charset="utf-8"></script>
+    <!-- <script src="{% static 'core/js/querySelector.js' %}" charset="utf-8"></script> -->
+
     {% bootstrap_javascript jquery='full' %}
+    
     {% block effect %} {% endblock %}
 </body>
 </html>
