Some changes and improvements

--- a/core/static/core/css/home.css
+++ b/core/static/core/css/home.css
@@ -152,7 +152,7 @@ footer {
 div.copy {
     margin-top: 0px;
     color: #f74843;
-    position: relative
+    position: relative;
 }
 
 #redes ul a {
