--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -6,7 +6,7 @@
             <a target="blank" href="https://everdev.pythonanywhere.com/">Portfolio</a>
         </ul>
     </div>
-    <div class="copy">
-        </p>2020 &copy Ever | Software Developer Student</p>
+    <div class="copy" style="font-family: elon, monospace !important;">
+        <p>2020 &copy EVER | SOFTWARE DEVELOPER</p>
     </div>
 </footer>
