Some changes and improvements

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -29,15 +29,15 @@
                 <ul class="nav justify-content-end">
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Tech</a>
+                        <a class="nav-link active text-white" href="#">Tech</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://everdev.pythonanywhere.com/contact/" target="blank">Contact</a>
+                        <a class="nav-link text-white" href="https://everdev.pythonanywhere.com/contact/" target="blank">Contact</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://everdev.pythonanywhere.com/about/" target="blank">About</a>
+                        <a class="nav-link text-white" href="https://everdev.pythonanywhere.com/about/" target="blank">About</a>
                     </li>
                 </ul>
             </div>
