Fix many things in frontend

--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -1,12 +1,15 @@
 <footer class="col-md-12">
     <div id="redes">
-        <ul style="padding-left: 0px !important;">
+        <ul>
+            <li style="font-size: 18px !important;">
             <a target="blank" href="https://github.com/ruizdiazever">GitHub</a>
             <a target="blank" href="https://www.linkedin.com/in/everdev/">Linkedln</a>
             <a target="blank" href="https://everdev.pythonanywhere.com/">Portfolio</a>
+            </li>
+            
         </ul>
     </div>
-    <div class="copy" style="font-family: elon, monospace !important;">
-        <p>2020 &copy EVER | SOFTWARE DEVELOPER</p>
+    <div class="copy" style="font-family: elon, monospace !important; font-size: 18px;">
+        <p>2020 &copy EVER</p>
     </div>
 </footer>
