--- a/core/static/core/css/home.css
+++ b/core/static/core/css/home.css
@@ -53,11 +53,16 @@ header {
 #places {
     margin-top: 110px;
     margin-bottom: 110px;
+    max-width: 90%;
 }
 
 /* FONT PLACES */
 #places article {
     font-family: 'Monoton', cursive;
+}
+
+#places article h1 {
+    font-size: 70px;
 }
 
 /* LINK PLACES */
@@ -133,7 +138,7 @@ div.row {
 footer {
     text-align: center;
     line-height: center;
-    width: 80px;
+    width: 100%;
     height: 100%;
     bottom: 0;
     position: static;
