--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,6 +12,10 @@
     {% block style %}
         <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
     {% endblock %}
+
+    <!-- Media query -->
+    <link href="{% static 'core/css/media.css' %}" media="(max-width:800px)" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
 </head>
@@ -22,27 +26,6 @@
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a style="margin-top: 20px;" title="Inicio" href="{% url 'home' %}"><img src="{% static 'core/img/logo.png' %}" title="Rerum System 0.1"alt="Aqui debe estar el logo" /></a>
-            
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
-                <ul class="nav justify-content-end">
-
-                    <li class="nav-item" >
-                        <a class="nav-link active" href="#">Tech</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link"  href="https://everdev.pythonanywhere.com/contact/" target="blank">Contact</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://everdev.pythonanywhere.com/about/" target="blank">About</a>
-                    </li>
-                </ul>
-            </div>
         </div>
     </nav>
 
